# PointCloudViewer

./: CMakeLists.txt  LICENSE  README.md
res/shaders/: unlit.frag  unlit.vert
screenshots/: sc.xcf
src/: CMakeLists.txt  imgui_impl.cpp  imgui_impl.h  imgui_style.h  main.cpp  model.hpp
